force-app/main/default/objects/CNA_Training__c/CNA_Training__c.object-meta.xml
<CustomObject>
    <label>CNA Training</label>
    <nameField>
        <displayFormat>CNA-{0000}</displayFormat>
        <label>CNA Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CNA Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>