force-app/main/default/objects/CNA_Training__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <inlineHelpText>Choose whether CNA hours marked is for Regular class or Makeup class</inlineHelpText>
    <label>Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Make-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>