force-app/main/default/objects/CNA_Training__c/fields/CNA_Total_Time__c.field-meta.xml
<CustomField>
    <fullName>CNA_Total_Time__c</fullName>
    <formula>Value(TEXT(Hours__c) ) +  ( Value(Text(Minutes__c))  / 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNA Total Time (in Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>