force-app/main/default/objects/CNA_Training__c/fields/Duration_of_Class__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Class__c</fullName>
    <inlineHelpText>Duration of Class field helps us to calculate the overall duration of the Session and it will count duration update to Roster and Enrollments as well.</inlineHelpText>
    <label>Duration of Class</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>