force-app/main/default/objects/CNA_Training__c/fields/Hours_in_number__c.field-meta.xml
<CustomField>
    <fullName>Hours_in_number__c</fullName>
    <label>Hours in number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>