force-app/main/default/objects/CNA_Training__c/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <label>Minutes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>02</fullName>
                <isActive>false</isActive>
                <label>02</label>
            </value>
            <value>
                <fullName>03</fullName>
                <isActive>false</isActive>
                <label>03</label>
            </value>
            <value>
                <fullName>04</fullName>
                <isActive>false</isActive>
                <label>04</label>
            </value>
            <value>
                <fullName>05</fullName>
                <isActive>false</isActive>
                <label>05</label>
            </value>
            <value>
                <fullName>06</fullName>
                <isActive>false</isActive>
                <label>06</label>
            </value>
            <value>
                <fullName>07</fullName>
                <isActive>false</isActive>
                <label>07</label>
            </value>
            <value>
                <fullName>08</fullName>
                <isActive>false</isActive>
                <label>08</label>
            </value>
            <value>
                <fullName>09</fullName>
                <isActive>false</isActive>
                <label>09</label>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>11</fullName>
                <isActive>false</isActive>
                <label>11</label>
            </value>
            <value>
                <fullName>12</fullName>
                <isActive>false</isActive>
                <label>12</label>
            </value>
            <value>
                <fullName>13</fullName>
                <isActive>false</isActive>
                <label>13</label>
            </value>
            <value>
                <fullName>14</fullName>
                <isActive>false</isActive>
                <label>14</label>
            </value>
            <value>
                <fullName>16</fullName>
                <isActive>false</isActive>
                <label>16</label>
            </value>
            <value>
                <fullName>17</fullName>
                <isActive>false</isActive>
                <label>17</label>
            </value>
            <value>
                <fullName>18</fullName>
                <isActive>false</isActive>
                <label>18</label>
            </value>
            <value>
                <fullName>19</fullName>
                <isActive>false</isActive>
                <label>19</label>
            </value>
            <value>
                <fullName>20</fullName>
                <isActive>false</isActive>
                <label>20</label>
            </value>
            <value>
                <fullName>21</fullName>
                <isActive>false</isActive>
                <label>21</label>
            </value>
            <value>
                <fullName>22</fullName>
                <isActive>false</isActive>
                <label>22</label>
            </value>
            <value>
                <fullName>23</fullName>
                <isActive>false</isActive>
                <label>23</label>
            </value>
            <value>
                <fullName>24</fullName>
                <isActive>false</isActive>
                <label>24</label>
            </value>
            <value>
                <fullName>25</fullName>
                <isActive>false</isActive>
                <label>25</label>
            </value>
            <value>
                <fullName>26</fullName>
                <isActive>false</isActive>
                <label>26</label>
            </value>
            <value>
                <fullName>27</fullName>
                <isActive>false</isActive>
                <label>27</label>
            </value>
            <value>
                <fullName>28</fullName>
                <isActive>false</isActive>
                <label>28</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>