force-app/main/default/objects/CNA_Training__c/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <formula>TEXT( Instructor_Count__c ) &amp; &quot;:&quot; &amp; TEXT( Student_Count__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratio</label>
    <type>Text</type>
</CustomField>