force-app/main/default/objects/CNA_Training__c/fields/Related_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Related_Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Attendance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Roster__c</field>
            <operation>equals</operation>
            <valueField>Attendance__c.Roaster__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Attendance__c</referenceTo>
    <relationshipLabel>CNA Trainings</relationshipLabel>
    <relationshipName>CNA_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>