force-app/main/default/objects/CNA_Training__c/fields/Roster__c.field-meta.xml
<CustomField>
    <fullName>Roster__c</fullName>
    <label>Roster</label>
    <referenceTo>Roaster__c</referenceTo>
    <relationshipLabel>CNA Trainings</relationshipLabel>
    <relationshipName>CNA_Trainings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>