force-app/main/default/objects/CNA_Training__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classrooom/Theory</fullName>
            </value>
            <value>
                <fullName>Clinical/Preceptor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>